src/main/java/org/openwdl/wdl/parser/WdlParser.java
// Generated from WdlParser.g4 by ANTLR 4.8
package org.openwdl.wdl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VERSION=1, IMPORT=2, WORKFLOW=3, TASK=4, STRUCT=5, SCATTER=6, CALL=7, 
		IF=8, THEN=9, ELSE=10, ALIAS=11, AS=12, In=13, INPUT=14, OUTPUT=15, PARAMETERMETA=16, 
		META=17, HEREDOC_COMMAND=18, COMMAND=19, RUNTIME=20, BOOLEAN=21, INT=22, 
		FLOAT=23, STRING=24, FILE=25, ARRAY=26, MAP=27, PAIR=28, OBJECT=29, OBJECT_LITERAL=30, 
		SEP=31, DEFAULT=32, IntLiteral=33, FloatLiteral=34, BoolLiteral=35, LPAREN=36, 
		RPAREN=37, LBRACE=38, RBRACE=39, LBRACK=40, RBRACK=41, ESC=42, COLON=43, 
		LT=44, GT=45, GTE=46, LTE=47, EQUALITY=48, NOTEQUAL=49, EQUAL=50, AND=51, 
		OR=52, OPTIONAL=53, STAR=54, PLUS=55, MINUS=56, DOLLAR=57, COMMA=58, SEMI=59, 
		DOT=60, NOT=61, TILDE=62, DIVIDE=63, MOD=64, SQUOTE=65, DQUOTE=66, WHITESPACE=67, 
		COMMENT=68, Identifier=69, SQuoteCommandStart=70, SQuoteUnicodeEscape=71, 
		SQuoteStringPart=72, DQuoteCommandStart=73, DQuoteUnicodeEscape=74, DQuoteStringPart=75, 
		HereDocUnicodeEscape=76, CommandUnicodeEscape=77, StringCommandStart=78, 
		EndCommand=79, CommandStringPart=80, HereDocEscapedEnd=81, EndHereDocCommand=82;
	public static final int
		RULE_map_type = 0, RULE_array_type = 1, RULE_pair_type = 2, RULE_type_base = 3, 
		RULE_wdl_type = 4, RULE_unboud_decls = 5, RULE_bound_decls = 6, RULE_any_decls = 7, 
		RULE_number = 8, RULE_expression_placeholder_option = 9, RULE_dquote_string = 10, 
		RULE_squote_string = 11, RULE_string = 12, RULE_primitive_literal = 13, 
		RULE_expr = 14, RULE_expr_infix = 15, RULE_expr_infix0 = 16, RULE_expr_infix1 = 17, 
		RULE_expr_infix2 = 18, RULE_expr_infix3 = 19, RULE_expr_infix4 = 20, RULE_expr_infix5 = 21, 
		RULE_expr_core = 22, RULE_version = 23, RULE_import_alias = 24, RULE_import_doc = 25, 
		RULE_struct = 26, RULE_meta_kv = 27, RULE_meta_obj = 28, RULE_task_runtime_kv = 29, 
		RULE_task_runtime = 30, RULE_task_input = 31, RULE_task_output = 32, RULE_task_command = 33, 
		RULE_task_element = 34, RULE_task = 35, RULE_inner_workflow_element = 36, 
		RULE_call_alias = 37, RULE_call_input = 38, RULE_call_inputs = 39, RULE_call_body = 40, 
		RULE_call = 41, RULE_scatter = 42, RULE_conditional = 43, RULE_workflow_input = 44, 
		RULE_workflow_output = 45, RULE_workflow_element = 46, RULE_workflow = 47, 
		RULE_document_element = 48, RULE_document = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"map_type", "array_type", "pair_type", "type_base", "wdl_type", "unboud_decls", 
			"bound_decls", "any_decls", "number", "expression_placeholder_option", 
			"dquote_string", "squote_string", "string", "primitive_literal", "expr", 
			"expr_infix", "expr_infix0", "expr_infix1", "expr_infix2", "expr_infix3", 
			"expr_infix4", "expr_infix5", "expr_core", "version", "import_alias", 
			"import_doc", "struct", "meta_kv", "meta_obj", "task_runtime_kv", "task_runtime", 
			"task_input", "task_output", "task_command", "task_element", "task", 
			"inner_workflow_element", "call_alias", "call_input", "call_inputs", 
			"call_body", "call", "scatter", "conditional", "workflow_input", "workflow_output", 
			"workflow_element", "workflow", "document_element", "document"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'import'", "'workflow'", "'task'", "'struct'", "'scatter'", 
			"'call'", "'if'", "'then'", "'else'", "'alias'", "'as'", "'in'", "'input'", 
			"'output'", "'parameter_meta'", "'meta'", null, null, "'runtime'", "'Boolean'", 
			"'Int'", "'Float'", "'String'", "'File'", "'Array'", "'Map'", "'Pair'", 
			"'Object'", "'object'", "'sep'", "'default'", null, null, null, "'('", 
			"')'", null, null, "'['", "']'", "'\\'", "':'", "'<'", "'>'", "'>='", 
			"'<='", "'=='", "'!='", "'='", "'&&'", "'||'", "'?'", "'*'", "'+'", "'-'", 
			null, "','", "';'", "'.'", "'!'", null, "'/'", "'%'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'\\>>>'", "'>>>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VERSION", "IMPORT", "WORKFLOW", "TASK", "STRUCT", "SCATTER", "CALL", 
			"IF", "THEN", "ELSE", "ALIAS", "AS", "In", "INPUT", "OUTPUT", "PARAMETERMETA", 
			"META", "HEREDOC_COMMAND", "COMMAND", "RUNTIME", "BOOLEAN", "INT", "FLOAT", 
			"STRING", "FILE", "ARRAY", "MAP", "PAIR", "OBJECT", "OBJECT_LITERAL", 
			"SEP", "DEFAULT", "IntLiteral", "FloatLiteral", "BoolLiteral", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "ESC", "COLON", "LT", 
			"GT", "GTE", "LTE", "EQUALITY", "NOTEQUAL", "EQUAL", "AND", "OR", "OPTIONAL", 
			"STAR", "PLUS", "MINUS", "DOLLAR", "COMMA", "SEMI", "DOT", "NOT", "TILDE", 
			"DIVIDE", "MOD", "SQUOTE", "DQUOTE", "WHITESPACE", "COMMENT", "Identifier", 
			"SQuoteCommandStart", "SQuoteUnicodeEscape", "SQuoteStringPart", "DQuoteCommandStart", 
			"DQuoteUnicodeEscape", "DQuoteStringPart", "HereDocUnicodeEscape", "CommandUnicodeEscape", 
			"StringCommandStart", "EndCommand", "CommandStringPart", "HereDocEscapedEnd", 
			"EndHereDocCommand"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WdlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Map_typeContext extends ParserRuleContext {
		public TerminalNode MAP() { return getToken(WdlParser.MAP, 0); }
		public TerminalNode LBRACK() { return getToken(WdlParser.LBRACK, 0); }
		public List<Wdl_typeContext> wdl_type() {
			return getRuleContexts(Wdl_typeContext.class);
		}
		public Wdl_typeContext wdl_type(int i) {
			return getRuleContext(Wdl_typeContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(WdlParser.COMMA, 0); }
		public TerminalNode RBRACK() { return getToken(WdlParser.RBRACK, 0); }
		public Map_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterMap_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitMap_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitMap_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Map_typeContext map_type() throws RecognitionException {
		Map_typeContext _localctx = new Map_typeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_map_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(MAP);
			setState(101);
			match(LBRACK);
			setState(102);
			wdl_type();
			setState(103);
			match(COMMA);
			setState(104);
			wdl_type();
			setState(105);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_typeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(WdlParser.ARRAY, 0); }
		public TerminalNode LBRACK() { return getToken(WdlParser.LBRACK, 0); }
		public Wdl_typeContext wdl_type() {
			return getRuleContext(Wdl_typeContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(WdlParser.RBRACK, 0); }
		public TerminalNode PLUS() { return getToken(WdlParser.PLUS, 0); }
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterArray_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitArray_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitArray_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_array_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ARRAY);
			setState(108);
			match(LBRACK);
			setState(109);
			wdl_type();
			setState(110);
			match(RBRACK);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLUS) {
				{
				setState(111);
				match(PLUS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pair_typeContext extends ParserRuleContext {
		public TerminalNode PAIR() { return getToken(WdlParser.PAIR, 0); }
		public TerminalNode LBRACK() { return getToken(WdlParser.LBRACK, 0); }
		public List<Wdl_typeContext> wdl_type() {
			return getRuleContexts(Wdl_typeContext.class);
		}
		public Wdl_typeContext wdl_type(int i) {
			return getRuleContext(Wdl_typeContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(WdlParser.COMMA, 0); }
		public TerminalNode RBRACK() { return getToken(WdlParser.RBRACK, 0); }
		public Pair_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterPair_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitPair_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitPair_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pair_typeContext pair_type() throws RecognitionException {
		Pair_typeContext _localctx = new Pair_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pair_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(PAIR);
			setState(115);
			match(LBRACK);
			setState(116);
			wdl_type();
			setState(117);
			match(COMMA);
			setState(118);
			wdl_type();
			setState(119);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_baseContext extends ParserRuleContext {
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public Map_typeContext map_type() {
			return getRuleContext(Map_typeContext.class,0);
		}
		public Pair_typeContext pair_type() {
			return getRuleContext(Pair_typeContext.class,0);
		}
		public TerminalNode STRING() { return getToken(WdlParser.STRING, 0); }
		public TerminalNode FILE() { return getToken(WdlParser.FILE, 0); }
		public TerminalNode BOOLEAN() { return getToken(WdlParser.BOOLEAN, 0); }
		public TerminalNode OBJECT() { return getToken(WdlParser.OBJECT, 0); }
		public TerminalNode INT() { return getToken(WdlParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(WdlParser.FLOAT, 0); }
		public TerminalNode Identifier() { return getToken(WdlParser.Identifier, 0); }
		public Type_baseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterType_base(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitType_base(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitType_base(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_baseContext type_base() throws RecognitionException {
		Type_baseContext _localctx = new Type_baseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_base);
		int _la;
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ARRAY:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				array_type();
				}
				break;
			case MAP:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				map_type();
				}
				break;
			case PAIR:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				pair_type();
				}
				break;
			case BOOLEAN:
			case INT:
			case FLOAT:
			case STRING:
			case FILE:
			case OBJECT:
			case Identifier:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				_la = _input.LA(1);
				if ( !(((((_la - 21)) & ~0x3f) == 0 && ((1L << (_la - 21)) & ((1L << (BOOLEAN - 21)) | (1L << (INT - 21)) | (1L << (FLOAT - 21)) | (1L << (STRING - 21)) | (1L << (FILE - 21)) | (1L << (OBJECT - 21)) | (1L << (Identifier - 21)))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Wdl_typeContext extends ParserRuleContext {
		public Type_baseContext type_base() {
			return getRuleContext(Type_baseContext.class,0);
		}
		public TerminalNode OPTIONAL() { return getToken(WdlParser.OPTIONAL, 0); }
		public Wdl_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wdl_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterWdl_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitWdl_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitWdl_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wdl_typeContext wdl_type() throws RecognitionException {
		Wdl_typeContext _localctx = new Wdl_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_wdl_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(127);
				type_base();
				setState(128);
				match(OPTIONAL);
				}
				break;
			case 2:
				{
				setState(130);
				type_base();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unboud_declsContext extends ParserRuleContext {
		public Wdl_typeContext wdl_type() {
			return getRuleContext(Wdl_typeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(WdlParser.Identifier, 0); }
		public Unboud_declsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unboud_decls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterUnboud_decls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitUnboud_decls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitUnboud_decls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unboud_declsContext unboud_decls() throws RecognitionException {
		Unboud_declsContext _localctx = new Unboud_declsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_unboud_decls);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			wdl_type();
			setState(134);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bound_declsContext extends ParserRuleContext {
		public Wdl_typeContext wdl_type() {
			return getRuleContext(Wdl_typeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(WdlParser.Identifier, 0); }
		public TerminalNode EQUAL() { return getToken(WdlParser.EQUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Bound_declsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bound_decls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterBound_decls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitBound_decls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitBound_decls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bound_declsContext bound_decls() throws RecognitionException {
		Bound_declsContext _localctx = new Bound_declsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bound_decls);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			wdl_type();
			setState(137);
			match(Identifier);
			setState(138);
			match(EQUAL);
			setState(139);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Any_declsContext extends ParserRuleContext {
		public Unboud_declsContext unboud_decls() {
			return getRuleContext(Unboud_declsContext.class,0);
		}
		public Bound_declsContext bound_decls() {
			return getRuleContext(Bound_declsContext.class,0);
		}
		public Any_declsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_any_decls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterAny_decls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitAny_decls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitAny_decls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Any_declsContext any_decls() throws RecognitionException {
		Any_declsContext _localctx = new Any_declsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_any_decls);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				unboud_decls();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				bound_decls();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode IntLiteral() { return getToken(WdlParser.IntLiteral, 0); }
		public TerminalNode FloatLiteral() { return getToken(WdlParser.FloatLiteral, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_la = _input.LA(1);
			if ( !(_la==IntLiteral || _la==FloatLiteral) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_placeholder_optionContext extends ParserRuleContext {
		public TerminalNode BoolLiteral() { return getToken(WdlParser.BoolLiteral, 0); }
		public TerminalNode EQUAL() { return getToken(WdlParser.EQUAL, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode DEFAULT() { return getToken(WdlParser.DEFAULT, 0); }
		public TerminalNode SEP() { return getToken(WdlParser.SEP, 0); }
		public Expression_placeholder_optionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_placeholder_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).enterExpression_placeholder_option(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WdlParserListener ) ((WdlParserListener)listener).exitExpression_placeholder_option(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WdlParserVisitor ) return ((WdlParserVisitor<? extends T>)visitor).visitExpression_placeholder_option(this);
			else return visitor.visitChildren(this);
		}
	}
